--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nativescript-accelerometer": "^1.0.0",
     "nativescript-angular": "~7.2.0",
     "nativescript-bluetooth": "^1.1.5",
+    "nativescript-speech-recognition": "^1.5.0",
     "nativescript-theme-core": "~1.0.4",
     "reflect-metadata": "~0.1.12",
     "rxjs": "~6.3.0",
